update project B & pics-link
copy les changements de curabitur.md vers projet-B.md
les images sont maintenant des liens clickables.

--- a/_posts/2016-11-07-projet-B.md
+++ b/_posts/2016-11-07-projet-B.md
@@ -5,17 +5,19 @@ date: 2016-11-07
 categories: Projet B
 ---
 
-Dans la continuation des mes déambulations et de la volonté de garder trace, je suis partie à la découverte de la ville très connue de Barcelone.
-Enorme masse touristique, superbes monuments historiques, ville de la culture, Barcelone est ici revisitée et réappropriée par mon 
-regard et mes photogaphies.
+<img src="/images/fulls/b5.jpg" width="350">
+
+Dans la continuation des mes déambulations et de la volonté de garder trace, je suis partie à la découverte de la ville très connue de Barcelone.  
+Enorme masse touristique, superbes monuments historiques, ville de la culture, Barcelone est ici revisitée et réappropriée par mon regard et mes photogaphies.
 
 J'ai essayé, à partir de cette série, d'apercevoir le quotidien barcelonais, la beauté des structures ordinaires marquées par
 l'industrie et l'humanité.
 
 Je suis, à travers de ma démarche sur ces errances, influencée par les photographes de la première moitié du 20ième siècle à Paris tels
-que Eugène Atget ou Brassaï. 
+que Eugène Atget ou Brassaï.
 
-<img src="/images/fulls/b2.jpg" width="350">  <img src="/images/fulls/b3.jpg" width="350"> 
-<img src="/images/fulls/b4.jpg" width="350">  <img src="/images/fulls/b5.jpg" width="350">  
-<img src="/images/fulls/b6.jpg" width="350">  <img src="/images/fulls/b7.jpg" width="350">
-<img src="/images/fulls/b1.jpg" width="350">
+<a href="/images/fulls/b7.jpg" target="_blank"><img src="/images/fulls/b7.jpg" width="350"></a> <a href="/images/fulls/b2.jpg" target="_blank"><img src="/images/fulls/b2.jpg" width="350"></a>
+
+<a href="/images/fulls/b3.jpg" target="_blank"><img src="/images/fulls/b3.jpg" width="350"></a> <a href="/images/fulls/b4.jpg" target="_blank"><img src="/images/fulls/b4.jpg" width="350"></a>
+
+<a href="/images/fulls/b6.jpg" target="_blank"><img src="/images/fulls/b6.jpg" width="350"></a>
