missing img link
image 5 est un lien aussi maintenant

--- a/_posts/2016-11-07-projet-B.md
+++ b/_posts/2016-11-07-projet-B.md
@@ -5,7 +5,7 @@ date: 2016-11-07
 categories: Projet B
 ---
 
-<img src="/images/fulls/b5.jpg" width="350">
+<a href="/images/fulls/b5.jpg" target="_blank"><img src="/images/fulls/b5.jpg" width="350"></a>
 
 Dans la continuation des mes déambulations et de la volonté de garder trace, je suis partie à la découverte de la ville très connue de Barcelone.  
 Enorme masse touristique, superbes monuments historiques, ville de la culture, Barcelone est ici revisitée et réappropriée par mon regard et mes photogaphies.
